tests/fixtures/invalid/reversed_none.py
# Cannot call reversed() with None
x = reversed(None)
